# zk-taxes

./: Cargo.toml  README.md
benches/: bench.rs
src/: authority.rs  certificate.rs  codec.rs  constants.rs  group_sig.rs  hasher.rs  lib.rs  merkle_tree.rs  primitives.rs  test_support.rs  transaction.rs  util.rs  validation.rs  wallet.rs
src/proofs/: certificate.rs  mod.rs  range.rs  spend.rs
