[package]
name = "zk-taxes"
version = "0.1.0"
authors = ["Jim Posen <jim.posen@gmail.com>"]
edition = "2018"

[dependencies]
bellman = { git = "https://github.com/jimpo/librustzcash", rev = "6333aafe" }
blake2 = "^0.8"
byteorder = "^1.3"
ff = { git = "https://github.com/jimpo/librustzcash", rev = "6333aafe" }
group = { git = "https://github.com/jimpo/librustzcash", rev = "6333aafe" }
pairing = { git = "https://github.com/jimpo/librustzcash", rev = "6333aafe" }
rand = "^0.7"
sapling-crypto = { git = "https://github.com/jimpo/librustzcash", rev = "6333aafe" }

[dev-dependencies]
hex = "^0.3"
serde_json = "^1.0"
