[package]
name = "zk-taxes"
version = "0.1.0"
authors = ["Jim Posen <jim.posen@gmail.com>"]
edition = "2018"

[dependencies]
bellman = { git = "https://github.com/jimpo/librustzcash", rev = "40f768ed" }
blake2 = "^0.8"
byteorder = "^1.3"
ff = { git = "https://github.com/jimpo/librustzcash", rev = "40f768ed" }
group = { git = "https://github.com/jimpo/librustzcash", rev = "40f768ed" }
pairing = { git = "https://github.com/jimpo/librustzcash", rev = "40f768ed" }
parity-codec = { version = "^4.1", features = ["derive"] }
rand = "^0.7"
zcash_primitives = { git = "https://github.com/jimpo/librustzcash", rev = "40f768ed" }
zcash_proofs = { git = "https://github.com/jimpo/librustzcash", rev = "40f768ed" }

[dev-dependencies]
hex = "^0.3"
serde_json = "^1.0"

[[bin]]
name = "generate_params"
