[package]
name = "zk-taxes"
version = "0.1.0"
authors = ["Jim Posen <jim.posen@gmail.com>"]
edition = "2018"

[dependencies]
bellman = { git = "https://github.com/jimpo/librustzcash", rev = "e1cb8def" }
blake2 = "^0.8"
blake2s_simd = "^0.5.8"
byteorder = "^1.3"
ff = { git = "https://github.com/jimpo/librustzcash", rev = "e1cb8def" }
group = { git = "https://github.com/jimpo/librustzcash", rev = "e1cb8def" }
pairing = { git = "https://github.com/jimpo/librustzcash", rev = "e1cb8def" }
rand = "^0.7"
zcash_primitives = { git = "https://github.com/jimpo/librustzcash", rev = "e1cb8def" }
zcash_proofs = { git = "https://github.com/jimpo/librustzcash", rev = "e1cb8def" }

[dev-dependencies]
hex = "^0.3"
serde_json = "^1.0"

[[bin]]
name = "generate_params"
